--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,13 +2,14 @@ spring:
   application:
     name: CT553_backend
   datasource:
-    url: jdbc:postgresql://localhost:5432/ct553
-    username: postgres
-    password: 123456
+    url: jdbc:postgresql://ct553-be-ct553.k.aivencloud.com:22066/ct553?sslmode=require
+    username: avnadmin
+    password: AVNS_PsfCeKl1BWSxBWjH-dj
 
   jpa:
     hibernate:
-      ddl-auto: update
+#      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
