--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,10 @@
             <artifactId>dotenv-java</artifactId>
             <version>3.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
