--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,7 +66,7 @@ application:
       rsa-public-key: classpath:certs/public-key.pem
       rsa-private-key: classpath:certs/private-key.pem
     jwt:
-      access-token-validity-in-seconds: 604800 # 1 day
+      access-token-validity-in-seconds: 604800 # 7 days
       refresh-token-validity-in-seconds: 604800 # 7 days
 
 cloudinary:
